# ESFilters

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
Quick_Actions/ES Bullets.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Clarify.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Events.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Personal.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Preview.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Professional.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Proofread Compress.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Proofread.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Reduce.workflow/Contents/: Info.plist  document.wflow
Quick_Actions/ES Summary.workflow/Contents/: Info.plist  document.wflow
src/emailsavant/: __init__.py
src/emailsavant/prompts/: bullets.prompt  clarify.prompt  personal.prompt  preview.prompt  professional.prompt  proofread.prompt  summary.prompt
src/emailsavant/tools/: inline_edit.py
